# mmgraphrag-odsc-west-2025

./: .gitignore  Justfile  ODSC_Downloadable_Requirements.md  README.md  populate_dicl.py  pyproject.toml  seed_data.yml
dicl_examples/examples.lance/_transactions/: 0-2d9a2074-bf63-4ed1-9170-f746caccd03c.txn  0-d90d70e6-ad99-439f-b7d4-c768e1b60d6c.txn
dicl_examples/examples.lance/_versions/: 1.manifest
src/: .env.example
src/mmgraphrag_odsc_east_2025/baml_client/: async_request.py  parser.py  partial_types.py  sync_request.py  types.py
src/mmgraphrag_odsc_east_2025/baml_src/: features.baml  generators.baml
src/mmgraphrag_odsc_east_2025/config/: __init__.py
src/mmgraphrag_odsc_east_2025/lib/: __init__.py  embedding.py  image_processing.py
src/mmgraphrag_odsc_east_2025/notebook/: mmgraphrag.ipynb
src/mmgraphrag_odsc_east_2025/tensorboard/: checkpoint  metadata.tsv  model.ckpt.data-00000-of-00001  model.ckpt.index  projector_config.pbtxt  vectors.tsv
src/mmgraphrag_odsc_east_2025/utils/: __init__.py  logger.py
src/mmgraphrag_odsc_west_2025/: __init__.py
src/mmgraphrag_odsc_west_2025/baml_client/: __init__.py  async_client.py  inlinedbaml.py  sync_client.py  type_builder.py
src/mmgraphrag_odsc_west_2025/baml_src/: av_spatiotemporal.baml  captions.baml  clients.baml  dicl.baml  features.baml
src/mmgraphrag_odsc_west_2025/config/: config.py
src/mmgraphrag_odsc_west_2025/lib/: audio_processing.py  dicl_system.py  embedding.py  image_processing.py
src/mmgraphrag_odsc_west_2025/notebook/: dicl_demo.ipynb  mmgraphrag.ipynb
src/mmgraphrag_odsc_west_2025/tensorboard/: checkpoint  metadata.tsv  model.ckpt.data-00000-of-00001  model.ckpt.index  vectors.tsv
src/mmgraphrag_odsc_west_2025/utils/: logger.py
tmp_lancedb/t.lance/_transactions/: 0-154a16a0-8a04-413b-a8df-5c5e1a92d7f6.txn
(+1 files in other folders)
